<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <Button
        android:id="@+id/btn_organizacion_intervalos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:backgroundTint="@color/transparent"
        android:drawableEnd="@drawable/baseline_arrow_down"
        android:text="@string/total"
        android:textColor="@color/black"
        android:textSize="8sp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <Button
            android:id="@+id/btn_org_periodos_anios_estadisticas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent"
            android:drawableEnd="@drawable/baseline_arrow_down"
            android:textColor="@color/black"
            android:textSize="8sp"
            android:layout_marginRight="15sp"
            android:visibility="invisible"
            />
        <Button
            android:id="@+id/btn_org_periodos_meses_estadisticas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent"
            android:drawableEnd="@drawable/baseline_arrow_down"
            android:textColor="@color/black"
            android:textSize="8sp"
            android:visibility="invisible"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:text="@string/total_entrenamientos"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:textSize="12sp"/>
        <TextView
            android:text="@string/total_ejercicios"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/stats_entrenamientos_totales"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_radio_selected"
            android:gravity="center"
            android:layout_marginRight="30dp"/>
        <TextView
            android:id="@+id/stats_ejercicios_totales"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_radio_selected"
            android:gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:text="@string/set_totales"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:textSize="12sp"/>
        <TextView
            android:text="@string/dropsets_totales"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/stats_sets_totales"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_radio_selected"
            android:gravity="center"
            android:layout_marginRight="30dp"/>
        <TextView
            android:id="@+id/stats_dropsets_totales"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_radio_selected"
            android:gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:text="@string/media_ejercicios_dia"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:textSize="12sp"/>
        <TextView
            android:text="@string/media_sets_dia"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/stats_media_ejercicios_dia"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_radio_selected"
            android:gravity="center"
            android:layout_marginRight="30dp"/>
        <TextView
            android:id="@+id/stats_media_sets_dia"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_radio_selected"
            android:gravity="center"
            />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_categorias_estadisticas"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp"/>

</LinearLayout>