<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.CreacionEjercicio">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary">

        <Button
            android:id="@+id/btn_atras_ce"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            app:icon="@drawable/outline_atras" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15sp"
            android:text="@string/creacion_ejercicio"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_aceptar_ce"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            app:icon="@drawable/baseline_check_24" />


    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_titulo_ejercicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_nombre_ejercicio" />


    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/categoria" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">

        <Spinner
            android:id="@+id/sp_categoria"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_nueva_categoria_CE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:drawableStart="@drawable/baseline_add"
            app:icon="@drawable/baseline_add" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="20dp">

        <CheckBox
            android:id="@+id/cb_ejercicio_compuesto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2.2"
            android:text="@string/cb_ejercicio_compuesto" />

        <Button
            android:id="@+id/btn_nuevo_ejercicio_compuesto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            app:icon="@drawable/baseline_add"
            android:layout_marginRight="10dp"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/btn_ayuda_ejercicio_compuesto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            app:icon="@drawable/baseline_help" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_ejercicios_compuestos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/tv_ejercicio_padre" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/sv_buscador_ejercicio_padre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_ayuda_ejercicio_padre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            app:icon="@drawable/baseline_help" />
    </LinearLayout>

    <Spinner
        android:id="@+id/sp_ejercicio_padre"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />



</LinearLayout>